feat:complete func

--- a/ui/index.html
+++ b/ui/index.html
@@ -35,9 +35,11 @@
         </div>
     </div>
 
-    <script src="js/mock-data.js"></script>
-    <script src="js/mock-api.js"></script>
-    <script src="js/api.js"></script>
+    <!-- Mock文件已禁用，使用真实API -->
+    <!-- <script src="js/mock-data.js"></script> -->
+    <!-- <script src="js/mock-api.js"></script> -->
+    <script src="js/clear-mock.js?v=2"></script>
+    <script src="js/api.js?v=2"></script>
     <script src="js/common.js"></script>
     <script src="js/searchable-select.js"></script>
     <script src="js/org-level1.js"></script>
@@ -45,7 +47,7 @@
     <script src="js/org-level3.js"></script>
     <script src="js/position.js"></script>
     <script src="js/salary-item.js"></script>
-    <script src="js/employee-archive.js"></script>
+    <script src="js/employee-archive.js?v=2"></script>
     <script src="js/salary-standard.js"></script>
     <script src="js/archive-register.js"></script>
     <script src="js/archive-review.js"></script>
